--- a/gleam.toml
+++ b/gleam.toml
@@ -21,3 +21,5 @@ birl = ">= 1.7.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
+birdie = ">= 1.1.8 and < 2.0.0"
+pprint = ">= 1.0.3 and < 2.0.0"
