--- a/gleam.toml
+++ b/gleam.toml
@@ -1,12 +1,12 @@
 name = "eventsourcing"
-version = "1.0.0"
+version = "0.1.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
 #
 description = "CQRS and Event Soucing in Gleam!"
 licences = ["Apache-2.0"]
-repository = { type = "github", user = "renatillas", repo = "eventsoucing" }
+repository = { type = "github", user = "renatillas", repo = "eventsourcing" }
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
@@ -14,9 +14,10 @@ gleam_otp = ">= 0.10.0 and < 1.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 gleam_pgo = ">= 0.13.0 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
-decode = ">= 0.2.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
 birdie = ">= 1.1.8 and < 2.0.0"
 pprint = ">= 1.0.3 and < 2.0.0"
+testcontainers = ">= 1.8.4 and < 2.0.0"
+decode = ">= 0.2.0 and < 1.0.0"
