--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "eventsourcing"
-version = "0.1.3"
+version = "0.2.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -14,6 +14,7 @@ gleam_otp = ">= 0.10.0 and < 1.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 gleam_pgo = ">= 0.13.0 and < 1.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
+sqlight = ">= 0.9.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
