--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "eventsourcing"
-version = "2.0.0"
+version = "2.0.1"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -12,6 +12,7 @@ repository = { type = "github", user = "renatillas", repo = "eventsourcing" }
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 gleam_otp = ">= 0.10.0 and < 1.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
+decode = ">= 0.2.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
