--- a/gleam.toml
+++ b/gleam.toml
@@ -13,6 +13,7 @@ gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 gleam_otp = ">= 0.10.0 and < 1.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 decode = ">= 0.2.0 and < 1.0.0"
+gleam_json = ">= 1.0.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
