improved testing and reduced docs

--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "eventsourcing"
-version = "4.0.0"
+version = "4.0.1"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -15,3 +15,6 @@ gleam_stdlib = ">= 0.52.0 and < 2.0.0"
 gleeunit = ">= 1.2.0 and < 2.0.0"
 birdie = ">= 1.2.5 and < 2.0.0"
 pprint = ">= 1.0.4 and < 2.0.0"
+gleam_otp = ">= 0.16.0 and < 1.0.0"
+gleam_erlang = ">= 0.33.0 and < 1.0.0"
+gleam_json = ">= 2.3.0 and < 3.0.0"
