--- a/gleam.toml
+++ b/gleam.toml
@@ -1,11 +1,11 @@
 name = "eventsourcing"
-version = "6.0.0"
+version = "6.0.1"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
 #
 description = "CQRS and Event Soucing in Gleam!"
-licences = ["Apache-2.0"]
+licences = ["MIT"]
 repository = { type = "github", user = "renatillas", repo = "eventsourcing" }
 
 [dependencies]
