--- a/gleam.toml
+++ b/gleam.toml
@@ -13,6 +13,7 @@ gleam_stdlib = ">= 0.52.0 and < 2.0.0"
 gleam_otp = ">= 1.1.0 and < 2.0.0"
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
 gleam_json = ">= 3.0.2 and < 4.0.0"
+gleam_time = ">= 1.4.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.2.0 and < 2.0.0"
